ghc-4335c07/testsuite/tests/partial-sigs/should_compile/ParensAroundContext.hs
{-# LANGUAGE PartialTypeSignatures #-}
module ParensAroundContext where

f :: (_) => a -> a -> Bool
f x y = x == y
