ghc-4335c07/testsuite/tests/partial-sigs/should_fail/WildcardInPatSynSig.hs
{-# LANGUAGE PatternSynonyms #-}
module WildcardInPatSynSig where

pattern Single :: () => (Show a) => _ -> [a]
pattern Single x = [x]
